tools/hrw4u/tests/data/hooks/invalid_section.fail.error.txt
tests/data/hooks/invalid_section.fail.input.txt:1:0: error: Invalid section name: 'FOOBAR'
   1 | FOOBAR:
     | ^
